tests/invalid/type/cast_int_3_14.pts
function main() : void {
    int c = (int)3.14;
}
